[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/basic_light1.png" type="Texture" id=1]
[ext_resource path="res://Projectile/lightnin/lightning_spray_varient1.png" type="Texture" id=2]
[ext_resource path="res://Projectile/lightnin/spray/light_spray.gd" type="Script" id=3]

[sub_resource type="CanvasItemMaterial" id=3]
blend_mode = 1

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 17.1318, 1.10282 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 99.6875, 4.25005 )

[node name="light_spray" type="RigidBody2D"]
collision_layer = 516
collision_mask = 512
mass = 0.00102041
gravity_scale = 0.0
script = ExtResource( 3 )

[node name="TinyBullet" type="Sprite" parent="."]
material = SubResource( 3 )
position = Vector2( 100, -1 )
scale = Vector2( 0.8, 0.5 )
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( -25, -1 )
collision_layer = 513
collision_mask = 513

[node name="external_collision" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 124.5, 1 )
scale = Vector2( 5.86626, 4.53383 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 128, 0 )
scale = Vector2( 2, 0.5 )
texture = ExtResource( 1 )
color = Color( 0.4, 0.92549, 0.941176, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 99.3125, 0 )
shape = SubResource( 2 )

[node name="appeartimer" type="Timer" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="appeartimer" to="." method="_on_appeartimer_timeout"]
